--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Egg::Plugin::Net::Ping.
 
+3.00  2008/02/24
+	- Corresponded to Egg::Release v3.00.
+
 2.00  2007/05/04
 	- Corresponded to Egg::Release v2.00.
 
